[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem9-hermes"
version = "0.2.0"
description = "mem9 persistent memory plugin for Hermes Agent - Cloud memory with auto recall and ingestion"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "mem9-ai", email = "support@mem9.ai"}
]
keywords = ["hermes", "agent", "memory", "mem9", "ai", "persistent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://mem9.ai"
Repository = "https://github.com/mem9-ai/mem9"
Documentation = "https://mem9.ai/docs"

[project.scripts]
mem9-install = "mem9_hermes.install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mem9_hermes*", "plugins*", "agent*", "tools*"]

[tool.setuptools.package-data]
mem9_hermes = ["*.md", "*.yaml"]
"plugins.memory.mem9" = ["*.yaml", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
